fixing vid anchor

--- a/Additional.html
+++ b/Additional.html
@@ -38,8 +38,10 @@
             </ul>
         </ol>
     <img src="assets/img/Alexis-Cereal%20Box.JPG" height="300" alt="Alexis Long when she was younger">
+    </div>
     <p></p>
-        Click <a href="#vid">here</a> to watch a video.
+     <div>
+        <ahref="#vid"> Click here to watch a video. </a>
     </div>
         
     <div class= "basic mainbody">
